[package]
name = "insides"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
description = "A compact, high performance space filling curve library for Rust."
homepage = "https://github.com/alexmadeathing/insides"
repository = "https://github.com/alexmadeathing/insides"
documentation = "https://docs.rs/insides"
readme = "README.md"
categories = ["algorithms", "encoding"]
keywords = ["morton", "hilbert", "curve", "quadtree", "octree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dilate = "0.6.0"

[dev-dependencies]
lazy_static = "1.4.0" # For test data
paste = "1.0.6" # For generation of multi-dimensional, multi-type, test names
