[package]
name = "insides"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A compact, high performance space filling curve library for Rust."
homepage = "https://github.com/alexmadeathing/insides"
repository = "https://github.com/alexmadeathing/insides"
documentation = "https://docs.rs/insides"
readme = "README.md"
categories = ["algorithms", "encoding"]
keywords = ["morton", "hilbert", "curve", "quadtree", "octree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["lut_large_d2", "lut_large_d3", "lut_large_d4"]
#default = ["lut_small_d2", "lut_small_d3", "lut_small_d4"]
lut_small_d2 = []
lut_small_d3 = []
lut_small_d4 = []
lut_large_d2 = []
lut_large_d3 = []
lut_large_d4 = []

[dependencies]
dilate = "0.6.2"
#dilate = { path = "../dilate" }

[dev-dependencies]
lazy_static = "1.4.0" # For test data
paste = "1.0.6" # For generation of multi-dimensional, multi-type, test names

# The rest of these dev dependencies are for benchmarking
criterion = { version = "0.3.5", features = ["html_reports"] }
fast_hilbert = "1.0.0"
hilbert_curve = "0.2.0"
hilbert_2d = "1.0.0"
hilbert_index = "0.2.0"
hilbert = "0.1.2"
num = "0.4.0"

[[bench]]
name = "benches"
harness = false
