[package]
name = "draw-curve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
plotters = "0.3.1"
opener = "0.5.0"
css-color-parser = "0.1.2"
clap = { version = "3.0", features = ["derive"] }
insides = { path = "../" }
